--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -467,6 +467,37 @@ h6 {
   }
 }
 
+
+.btn-shopping-cart {
+  position: fixed;
+  top: 100px;
+  right: 15px;
+  z-index: 1000;
+  background: var(--accent-color);
+  color: var(--contrast-color);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s;
+}
+
+.btn-shopping-cart:hover {
+  background: color-mix(in srgb, var(--accent-color), #000 10%);
+  color: var(--contrast-color);
+}
+
+.btn-shopping-cart .badge {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  padding: 5px 7px;
+  border-radius: 50%;
+  font-size: 10px;
+  font-weight: normal;
+}
 /*--------------------------------------------------------------
 # Global Footer
 --------------------------------------------------------------*/
